import 'package:flutter_architecture_sample/resource/my_colors.dart';

class Languages {
  /// プログラミング言語ラベルの背景色マップ
  static const colorMap = {
    "Kotlin": MyColors.kotlin,
    "C++": MyColors.cpp,
    "Dart": MyColors.dart,
    "Python": MyColors.python,
    "Java": MyColors.java,
    "Swift": MyColors.swift,
    "HTML": MyColors.html
  };
}
