/// 文字列定義
class Strings {
  static const String appTitle = "Flutter Architecture Sample";

  static const String homeTitle = "GitHub Repository List";

  static const String like = "like";

  static const String fork = "Fork";

  static const String networkError = "インターネット接続がありません。";

  static const String reload = "再読込";

  static const String serverError = "サーバエラーが発生しました。"
      "しばらく待ってからお使いください。\n"
      "API呼び出しの制限回数を超過したか、GitHubがメンテナンス中の可能性があります。";

  static const String notFoundError = "該当リソースがありません。";

  static const String unknownError = "未知のエラーが発生しました。";

  static const String readmeNotFound = "README.mdがありませんでした。";
}
